# food

./: .gitignore  1.index.js  CHANGELOG.md  Cargo.toml  LICENSE  README.md  __main__.py  app.js  asdf.html  asdf.js  asdf2.json  flake.nix  index.html  json_to_rust.py
.github/workflows/: release.yaml  test-and-build.yaml
assets/: index.2e59bb0b.js
cli/: Cargo.toml
cli/src/: main.rs
food-lib/: Cargo.toml  flake.nix
food-lib/src/: .lib.rs.swp  lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
python/: __main__.py  flake.nix
rust/: ..gitignore.un~  .Cargo.toml.swp  .Cargo.toml.un~  .flake.nix.swp  .flake.nix.un~  .gitignore  Cargo.toml  flake.nix
rust/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
rust/.direnv/flake-inputs/: 15clk3b04lya62fd3hqa5713jxzwv5y7-source  fn03py5wi8d94hqg6m9wvs4672dqxzls-source  jsa6gkbh7xga7bhhcj1iglq7x6x4z96q-source  lgndcx606138al4asfp849fv7infbpx4-source  ql3zf52wdclvqj2rg1kjksnzr2k1qqkr-source
rust/src/: .main.rs.swp  .main.rs.un~  cli.rs  lib.rs  main.rs
src/: lib.rs  main.rs
tests/: cli.rs
web/: Cargo.toml  index.html  index.js  package-lock.json  package.json  vite.config.ts
web/food-web/: Cargo.toml
web/food-web/src/: lib.rs
web/src/: index.ts  lib.rs
