[package]
name = "food"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Library and CLI for creating meal plans"
homepage = "https://github.com/notusknot/food"
repository = "https://github.com/notusknot/food"
readme = "./README.md"

[dependencies]
fastrand = "1.7.0"
pico-args = { version = "0.5.0", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.81" }
console_error_panic_hook = "0.1.7"

[features]
default = [ "pico-args" ]

[lib]
crate-type = ["cdylib"]
name = "food"
path = "src/lib.rs"

[[bin]]
name = "food"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false