[workspace]

members = [
    "cli",
    "lib",
    "web"
]

[profile.release.package.food-web]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
opt-level = "z"

[profile.release.package.food-cli]
strip = true
codegen-units = 1
opt-level = 3

[profile.release.package.food-lib]
strip = true
codegen-units = 1