[package]
name = "food-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "CLI for creating meal plans"
homepage = "https://github.com/notusknot/food"
repository = "https://github.com/notusknot/food"
readme = "../README.md"

[dependencies]
food-lib = { path = "../lib" }

[[bin]]
name = "food"
path = "src/main.rs"