[package]
name = "food-lib"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Library and CLI for creating meal plans"
homepage = "https://github.com/notusknot/food"
repository = "https://github.com/notusknot/food"
readme = "../README.md"

[dependencies]
rand = { version = "0.8.5" }
pico-args = { version = "0.5.0" }