cargo-features = ["strip"]

[package]
name = "food"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rusqlite = "0.27.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
