[package]
name = "food-lib"
version = "0.1.0"
edition = "2021"
description = "Library and CLI for creating meal plans"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rusqlite = "0.27.0"
#miniserde = "0.1.24"
#wasm-bindgen = "0.2.80"

[lib]
crate-type = ["cdylib"]
name = "food"
path = "src/lib.rs"

[[bin]]
name = "food"
path = "src/cli.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
