[package]
name = "food-web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Website for creating meal plans"
homepage = "https://github.com/notusknot/food"
repository = "https://github.com/notusknot/food"
readme = "./README.md"

[dependencies]
food-lib = { path = "../../lib" }
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.58"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]